project(sp_swig)
cmake_minimum_required(VERSION 3.17...3.22)
option(CGALPY_BUILD_SHARED_LIBS "Build shared libs instead of static libs" ON)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
set(PY_VERSION 3.8)
find_package(PythonLibs ${PY_VERSION} REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_SWIG_FLAGS "")
set_source_files_properties(sp_swig.i PROPERTIES CPLUSPLUS ON)
swig_add_library(sp_swig TYPE SHARED LANGUAGE python SOURCES sp.i)
swig_link_libraries(sp_swig ${PYTHON_LIBRARIES})
